# EasyJNI

./: CMakeLists.txt  main.cpp
EasyJNI-C/: CMakeLists.txt  main.cpp
EasyJNI-C/include/: Converter.h  EasyJNI.h  JavaClassDefine.h  TypeConverter.h  Utils.cpp  Utils.h
EasyJNI-C/include/class/: DefaultClassDefinitions.h  JavaClassInfo.cpp  JavaClassInfo.h  JavaField.cpp  JavaField.h  JavaFieldImpl.h  JavaMethode.cpp  JavaMethode.h  JavaMethodeImpl.h
EasyJNI-C/include/utils/: ByteStream.cpp  SocketUtil.h  TraceUtils.h  UUIDUtils.h
EasyJNI-C/src/: JavaClassInfo.cpp  JavaField.cpp  JavaMethode.cpp  Utils.cpp
EasyJNI-C/test/: JNIImpl.cpp  JNISpeedTest.cpp  TestJavaClasses.h
EasyJNI-Java/: .project  pom.xml
EasyJNI-Java/src/dev/wolveringer/EasyJNI/: EasyJNI.java  Main.java
EasyJNI-Java/src/dev/wolveringer/EasyJNI/test/: TestInstanceCalls.java  TestInstanceFields.java  TestStaticCalls.java  TestStaticFields.java
EasyJNI-Java/src/dev/wolveringer/EasyJNI/test/instance/: BasicClass.java  InformationHolder.java
EasyJNI-Java/src/dev/wolveringer/EasyJNI/test/speed/: Main.java  StringClass.java
include/: Converter.h  Utils.h
include/class/: JavaClassInfo.h  JavaFieldImpl.h  JavaMethode.h
include/utils/: ActionLimiter.h  ByteStream.h  ChatUtils.h  StringUtil.h  SystemInfo.h  Systeminfo.cpp  ThreadUtils.cpp  ThreadUtils.h  TimeUtils.h  UUIDUtils.cpp  VectorUtils.h
test/: JNIImpl.cpp  TestJavaClasses.h
